fixing icon alignment

--- a/frontend/src/components/Comments/comments.css
+++ b/frontend/src/components/Comments/comments.css
@@ -62,7 +62,7 @@
     border-radius:100%;
     margin-right:0.5vw;
     margin-left:1vw;
-    font-size:4vw;
+    font-size:3vw;
     margin-top:0.5vw;
 }
 
